# CLASmovingbase

./: CMakeLists.txt  README.md  package.xml
launch/: robot_localization_test.launch  robot_pose_ekftest.launch
scripts/: GPSodom.py  movingbase_quat.py
